--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
 
-  <header class="banner">
+  <header id="home" class="banner">
 
     <div class="menuIcon">
         <span class="burguerMenu"></span>
@@ -34,6 +34,7 @@
         <li><a href="#projects">projects</a></li>
         <li><a href="#aboutme">about</a></li>
         <li><a href="#contact">contact</a></li>
+        <li><a href="#home">home</a></li>
       </ul>
       
    </nav>
@@ -223,7 +224,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
   <script src="https://unpkg.com/@studio-freight/lenis@1.0.33/dist/lenis.min.js"></script>
-  <script src="app.js"></script>
+  <script type="module" src="app.js"></script>
   
 </body>
 
