Se da comienzo a la etapa responsiva, dando inicio a parte final del proyecto

--- a/index-es.html
+++ b/index-es.html
@@ -333,9 +333,10 @@ El proyecto fue desarrollado en un entorno colaborativo utilizando metodologías
       </div>
       
       <div class="information">
-              <span id="emailText">Email: brunocostalesdev@gmail.com<i class="fa-solid fa-copy pers"></i></span>
+             <span class="emailContent">Email:</span> <span class="emailContent" id="emailText">brunocostalesdev@gmail.com</span><img id="copyIcon" src="./images/copypasteIcon.png" alt="Icon copypaste" title="Copy Email">
 
       </div>
+
 
 
       <div class="socialLinks">
