--- a/index-es.html
+++ b/index-es.html
@@ -345,7 +345,7 @@ El proyecto fue desarrollado en un entorno colaborativo utilizando metodologías
           target="_blank">Linkedin</a>
         <a href="mailto:brunocostalesdev@gmail.com">Mail me</a>
       </div>
-      <form action="mailto:brunocostalesdev@gmail.com" method="post" enctype="text/plain" class="mailtoForm">
+      <form id="contact-form" class="mailtoForm">
         <div>
           <div class="label">Deja un mensaje...</div>
           <input type="email" id="email" name="email" placeholder="Ingresá tu correo electrónico" required>
@@ -371,6 +371,7 @@ El proyecto fue desarrollado en un entorno colaborativo utilizando metodologías
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
   <script src="https://unpkg.com/@studio-freight/lenis@1.0.33/dist/lenis.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <script type="module" src="./js/app.js"></script>
 
 </body>
