--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ The result is a clean, user-centered platform that reflects the companys focus o
           target="_blank">Linkedin</a>
         <a href="mailto:brunocostalesdev@gmail.com">Mail me</a>
       </div>
-      <form action="mailto:brunocostalesdev@gmail.com" method="post" enctype="text/plain" class="mailtoForm">
+      <form id="contact-form" class="mailtoForm">
         <div>
           <div class="label">Leave a message...</div>
           <input type="email" id="email" name="email" placeholder="Enter your email" required>
@@ -381,6 +381,7 @@ The result is a clean, user-centered platform that reflects the companys focus o
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
   <script src="https://unpkg.com/@studio-freight/lenis@1.0.33/dist/lenis.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <script type="module" src="./js/app.js"></script>
 
 </body>
