--- a/index-es.html
+++ b/index-es.html
@@ -80,8 +80,8 @@
   <span>|</span>
   <button id¿="btn-es">ES</button>
 </div></li>
-              <li><a href="#experience">proyectos</a></li>
-              <li><a href="#contact">contacto</a></li>
+              <li><a href="#" id = "btnScrollToProjects">proyectos</a></li>
+              <li><a href="#" id = "btnScrollToContact">contacto</a></li>
             </ul>
           </nav>
           <h1 class="bannerTitleBack">Hola!</h1>
@@ -370,6 +370,7 @@ El proyecto fue desarrollado en un entorno colaborativo utilizando metodologías
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollToPlugin.min.js"></script>
   <script src="https://unpkg.com/@studio-freight/lenis@1.0.33/dist/lenis.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <script type="module" src="./js/app.js"></script>
