Se corrigieron inconvenientes en la subida del sitio web.

--- a/index-es.html
+++ b/index-es.html
@@ -133,7 +133,7 @@
             </div>
             <div class="hideblock">
               <div class="description">
-               <p>Soy desarrollador web formado en una universidad privada de Argentina. Durante mis estudios obtuve una beca en una empresa reconocida del país, donde participé en el desarrollo de un sitio web como parte de un equipo. El proyecto se llevó a cabo de manera sincrónica, siguiendo metodologías ágiles como Scrum, con sprints, fechas límite y reuniones regulares que nos permitieron organizarnos y entregar con eficiencia.</p>
+               <p>Soy desarrollador web formado en una universidad privada de Argentina. Durante mis estudios obtuve una beca en una empresa reconocida del país, donde participé en el desarrollo de un sitio web como parte de un equipo. El proyecto se llevó a cabo de manera sincrónica, siguiendo metodologías ágiles como Scrum, con sprints, fechas límite y reuniones regulares que, junto con mi equipo, nos permitieron organizarnos y entregar con eficiencia.</p>
 
 <p>Trabajé como Analista Técnico para una empresa de mensajería oficial en Argentina, donde brindé soporte a más de 4.000 usuarios, gestioné entornos Unix/Linux y desarrollé scripts utilizando PowerShell y CMD. Este rol también implicó una interacción constante con personas, fortaleciendo mis habilidades de comunicación y soporte al cliente.</p>
 
