Se corrigieron inconvenientes en la subida del sitio web.

--- a/index-es.html
+++ b/index-es.html
@@ -149,8 +149,8 @@
             <div class="layoutAboutBox" id="aboutMeLayout">
               <div class="navOptions">
                 <ul class="navLinksAbout">
-                  <li><a href="#">Formación</a></li>
-                  <li><a href="#projects">Proyectos</a></li>
+                  <li><a >Formación</a></li>
+                  <li><a >Proyectos</a></li>
                   
                 </ul>
               </div>
