Se corrigieron inconvenientes en la subida del sitio web.

--- a/index-es.html
+++ b/index-es.html
@@ -100,7 +100,7 @@
                 <button class="buttonArrow"><img  loading="lazy" src="images/bottom-arrow.svg" alt="Boton flecha"></button>
 
           <div class="sillhoullete">
-            <img loading="eager"  src="images/silueta.png" alt="Imagen de silueta">
+            <img   src="images/silueta.png" alt="Imagen de silueta">
           </div>
 
 
