--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <button class="buttonArrow"><img loading="lazy" src="images/bottom-arrow.svg" alt="Button Arrow"></button>
 
           <div class="sillhoullete">
-            <img loading="eager" src="images/silueta.png" alt="sillhoulleteImage">
+            <img src="images/silueta.png" alt="sillhoulleteImage">
           </div>
 
 
