Se corrigieron inconvenientes en la subida del sitio web.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
   <meta name="description"
     content="Web portfolio of Bruno Costales, web developer with experience in front-end, back-end, scripting and WordPress solutions.">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,400;0,700;1,100;1,700&display=swap"
-    rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;600&display=swap" rel="stylesheet">
+  
+  <link  href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,400;0,700;1,100;1,700&display=swap" rel="stylesheet">
+  <link  href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;600&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css">
   <title>Bruno Costales</title>
