Se corrigieron inconvenientes en la subida del sitio web.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description"
     content="Web portfolio of Bruno Costales, web developer with experience in front-end, back-end, scripting and WordPress solutions.">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  
+
   <link  href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,400;0,700;1,100;1,700&display=swap" rel="stylesheet">
   <link  href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;600&display=swap" rel="stylesheet">
 
@@ -373,10 +373,9 @@ The result is a clean, user-centered platform that reflects the companys focus o
   </section>
 
   <!-- FOOTER -->
-  <footer class="bg-dark text-white text-center p-3">
+  <footer>
     <small>© 2025 BrunoCostalesDev. All rights reserved.</small>
   </footer>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
   <script src="https://unpkg.com/@studio-freight/lenis@1.0.33/dist/lenis.min.js"></script>
