Se corrigieron inconvenientes en la subida del sitio web.

--- a/index-es.html
+++ b/index-es.html
@@ -7,12 +7,10 @@
   <meta name="description"
     content="Web portfolio of Bruno Costales, web developer with experience in front-end, back-end, scripting and WordPress solutions.">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,400;0,700;1,100;1,700&display=swap"
-    rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,400;0,700;1,100;1,700&family=Sora:wght@300;400;600&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="style.css">
+
+  <link rel="stylesheet" href="style.css"  media="print" onload="this.media='all'">
   <title>Bruno Costales</title>
 </head>
 
@@ -94,13 +92,13 @@
             </div>
 
             <p class="leadd">
-            Desarrollo soluciones digitales eficientes y bien estructuradas, adaptadas a las necesidades específicas de cada proyecto. Con experiencia en desarrollo web y optimización de sistemas, me enfoco en ofrecer resultados de alta calidad utilizando tecnologías actuales. Si necesitás asesoramiento o apoyo en tus proyectos, estaré encantado de ayudarte.</p>
+            Desarrollo soluciones digitales eficientes y bien estructuradas, adaptadas a las necesidades específicas de cada proyecto. <span class="mobileHide">Con experiencia en desarrollo web y optimización de sistemas, me enfoco en ofrecer resultados de alta calidad utilizando tecnologías actuales.</span> Si necesitás asesoramiento o apoyo en tus proyectos, estaré encantado de ayudarte.</p>
            
           </div>
                 <button class="buttonArrow"><img  loading="lazy" src="images/bottom-arrow.svg" alt="Boton flecha"></button>
 
           <div class="sillhoullete">
-            <img   src="images/silueta.png" alt="Imagen de silueta">
+            <img  fetchpriority="high"  src="images/silueta.png" alt="Imagen de silueta">
           </div>
 
 
@@ -133,11 +131,11 @@
             </div>
             <div class="hideblock">
               <div class="description">
-               <p>Soy desarrollador web formado en una universidad privada de Argentina. Durante mis estudios obtuve una beca en una empresa reconocida del país, donde participé en el desarrollo de un sitio web como parte de un equipo. El proyecto se llevó a cabo de manera sincrónica, siguiendo metodologías ágiles como Scrum, con sprints, fechas límite y reuniones regulares que, junto con mi equipo, nos permitieron organizarnos y entregar con eficiencia.</p>
+               <p>Soy desarrollador web formado en una universidad privada de Argentina. Durante mis estudios obtuve una beca en una empresa reconocida del país, donde participé en el desarrollo de un sitio web como parte de un equipo.<span class="mobileHide"> El proyecto se llevó a cabo de manera sincrónica, siguiendo metodologías ágiles como Scrum, con sprints, fechas límite y reuniones regulares que, junto con mi equipo, nos permitieron organizarnos y entregar con eficiencia.</span></p>
 
-<p>Trabajé como Analista Técnico para una empresa de mensajería oficial en Argentina, donde brindé soporte a más de 4.000 usuarios, gestioné entornos Unix/Linux y desarrollé scripts utilizando PowerShell y CMD. Este rol también implicó una interacción constante con personas, fortaleciendo mis habilidades de comunicación y soporte al cliente.</p>
+<p>Trabajé como Analista Técnico para una empresa de mensajería oficial en Argentina, donde brindé soporte a más de 4.000 usuarios <span class="mobileHide">, gestioné entornos Unix/Linux y desarrollé scripts utilizando PowerShell y CMD. Este rol también implicó una interacción constante con personas, fortaleciendo mis habilidades de comunicación y soporte al cliente</span> .</p>
 
-<p>Viví en Aspen, Colorado, donde desarrollé soluciones digitales personalizadas para negocios locales. Actualmente resido en Argentina, trabajando en proyectos personales y ampliando mis conocimientos. Trabajo con tecnologías como HTML, CSS, JavaScript, Java, Node.js, Express, MongoDB, MySQL, PHP, WordPress, Bootstrap, Git, GitHub y herramientas de scripting. Estoy comprometido con el aprendizaje continuo para ofrecer soluciones valiosas y de calidad.</p>
+<p>Viví en Aspen, Colorado, donde desarrollé soluciones digitales personalizadas para negocios locales. <span class="mobileHide">Actualmente resido en Argentina, trabajando en proyectos personales y ampliando mis conocimientos.</span> Trabajo con tecnologías como HTML, CSS, JavaScript, Java, Node.js, Express, MongoDB, MySQL, PHP, WordPress, Bootstrap, Git, GitHub y herramientas de scripting. <span class="mobileHide"> Estoy comprometido con el aprendizaje continuo para ofrecer soluciones valiosas y de calidad.</span></p>
 
 
               </div>
@@ -208,15 +206,15 @@
               <ul>
                 <li>
                   <h2>Desarrollador Freelance</h2>
-                  <p>Mientras vivía en Aspen, Colorado, trabajé como desarrollador freelance y creé el sitio web LimitlessFeet.com para Foot Foundations, una empresa especializada en soluciones ortopédicas. Gestioné todo el ciclo de desarrollo, desde el diseño visual hasta la implementación técnica, fortaleciendo mi capacidad para trabajar de forma autónoma, comunicarme con clientes en inglés y entregar soluciones personalizadas alineadas con sus objetivos comerciales.</p>
+                  <p>Mientras vivía en Aspen, Colorado, trabajé como desarrollador freelance y creé el sitio web LimitlessFeet.com para Foot Foundations, una empresa especializada en soluciones ortopédicas. Gestioné todo el ciclo de desarrollo, desde el diseño visual hasta la implementación técnica<span class="mobileHide">, fortaleciendo mi capacidad para trabajar de forma autónoma, comunicarme con clientes en inglés y entregar soluciones personalizadas alineadas con sus objetivos comerciales</span>.</p>
                 </li>
                 <li>
                   <h2>Analista de Software</h2>
-                  <p>Trabajé como Analista de Software en Correo Argentino, el servicio postal nacional, brindando soporte técnico a una red de más de 4.000 usuarios en todo el país. Mis responsabilidades incluían la resolución de problemas en sistemas operativos, aplicaciones internas y conectividad. También desarrollé scripts de automatización utilizando PowerShell, CMD y entornos Unix/Linux para optimizar tareas administrativas y operativas.</p>
+                  <p>Trabajé como Analista de Software en Correo Argentino, el servicio postal nacional, brindando soporte técnico a una red de más de 4.000 usuarios en todo el país.<span class="mobileHide"> Mis responsabilidades incluían la resolución de problemas en sistemas operativos, aplicaciones internas y conectividad. También desarrollé scripts de automatización utilizando PowerShell, CMD y entornos Unix/Linux para optimizar tareas administrativas y operativas.</span></p>
                 </li>
                 <li>
                   <h2>Desarrollador Full Stack</h2>
-                  <p>Como parte de un bootcamp intensivo en Digital House, desarrollé MyMad Games, una plataforma ficticia de e-commerce centrada en la venta de videojuegos. El proyecto fue construido utilizando HTML, CSS, JavaScript y Node.js, incorporando principios de diseño UX/UI y metodologías ágiles. Además de mejorar mis habilidades técnicas, este proyecto me enseñó a colaborar en equipo, cumplir con plazos ajustados y mantener una coherencia visual y funcional en una aplicación full stack.</p>
+                  <p>Como parte de un bootcamp intensivo en Digital House, desarrollé MyMad Games, una plataforma ficticia de e-commerce centrada en la venta de videojuegos. El proyecto fue construido utilizando HTML, CSS, JavaScript y Node.js, incorporando principios de diseño UX/UI y metodologías ágiles.<span class="mobileHide"> Además de mejorar mis habilidades técnicas, este proyecto me enseñó a colaborar en equipo, cumplir con plazos ajustados y mantener una coherencia visual y funcional en una aplicación full stack.</span></p>
                 </li>
               </ul>
             </div>
