--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     content="Web portfolio of Bruno Costales, web developer with experience in front-end, back-end, scripting and WordPress solutions.">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-  <link  href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,400;0,700;1,100;1,700&display=swap" rel="stylesheet">
-  <link  href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,400;0,700;1,100;1,700&family=Sora:wght@300;400;600&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="style.css">
+
+  <link rel="stylesheet" href="style.css"  media="print" onload="this.media='all'">
   <title>Bruno Costales</title>
 </head>
 
@@ -93,17 +93,17 @@
             </div>
 
             <p class="leadd">
-              I develop efficient and well-structured digital solutions tailored to the specific needs of each project.
+              I develop efficient and well-structured digital solutions tailored to the specific needs of each project. <span class="mobileHide" >
               With
               experience in web development and system optimization, I focus on delivering high-quality results using
-              current technologies. If you're looking for advice or support on your projects, I'd be happy to assist
+              current technologies.</span> If you're looking for advice or support on your projects, I'd be happy to assist
               you.</p>
            
           </div>
                 <button class="buttonArrow"><img loading="lazy" src="images/bottom-arrow.svg" alt="Button Arrow"></button>
 
           <div class="sillhoullete">
-            <img src="images/silueta.png" alt="sillhoulleteImage">
+            <img fetchpriority="high" src="images/silueta.png" alt="sillhoulleteImage">
           </div>
 
 
@@ -137,14 +137,14 @@
             <div class="hideblock">
               <div class="description">
                  <p>I’m a web developer trained at a private university in Argentina. During my studies, I earned a scholarship at
-        a well-known company in my country, where I helped develop a website as part of a team. The project was carried
+        a well-known company in my country, where I helped develop a website as part of a team. <span class="mobileHide">The project was carried
         out synchronously, following agile methodologies such as Scrum, with sprints, deadlines, and regular meetings
-        that allowed us to organize and deliver efficiently.</p>
+        that allowed us to organize and deliver efficiently.</span></p>
       <p>I worked as a Technical Analyst for an official courier company in Argentina, where I supported over 4,000
-        users, managed Unix/Linux environments, and developed scripts using PowerShell and CMD. This role also involved
-        regular interaction with people, which strengthened my communication and customer support skills.</p>
-      <p>I lived in Aspen, Colorado, where I developed custom digital solutions for local businesses. I am currently
-        based in Argentina, continuing to work on personal projects and expanding my knowledge. I work with technologies
+        users, managed Unix/Linux environments, and developed scripts using PowerShell and CMD.<span class="mobileHide"> This role also involved
+        regular interaction with people, which strengthened my communication and customer support skills.</span></p>
+      <p>I lived in Aspen, Colorado, where I developed custom digital solutions for local businesses.<span class="mobileHide"> I am currently
+        based in Argentina, continuing to work on personal projects and expanding my knowledge. </span>  I work with technologies
         such as HTML, CSS, JavaScript, Java, Node.js, Express, MongoDB, MySQL, PHP, WordPress, Bootstrap, Git, GitHub,
         and scripting tools. I’m committed to continuous learning to deliver high-quality, valuable solutions.</p>
 
@@ -219,15 +219,15 @@
               <ul>
                 <li>
                   <h2>Freelance Developer</h2>
-                  <p>While living in Aspen, Colorado, I worked as a freelance developer and created the website LimitlessFeet.com for Foot Foundations, a company specializing in orthopedic solutions. I managed the entire development cycle, from visual design to technical implementation, strengthening my ability to work independently, communicate with clients in English, and deliver tailored solutions aligned with their business goals.</p>
+                  <p>While living in Aspen, Colorado, I worked as a freelance developer and created the website LimitlessFeet.com for Foot Foundations, a company specializing in orthopedic solutions. I managed the entire development cycle, from visual design to technical implementation <span class="mobileHide">, strengthening my ability to work independently, communicate with clients in English, and deliver tailored solutions aligned with their business goals</span>.</p>
                 </li>
                 <li>
                   <h2>Software  Analyst</h2>
-                  <p>I worked as a Software Analyst at Correo Argentino, the national postal service, providing technical support to a network of over 4,000 users across the country. My responsibilities included troubleshooting operating systems, internal applications, and connectivity issues. I also developed automation scripts using PowerShell, CMD, and Unix/Linux environments to streamline administrative and operational tasks.</p>
+                  <p>I worked as a Software Analyst at Correo Argentino, the national postal service, providing technical support to a network of over 4,000 users across the country.<span class="mobileHide"> My responsibilities included troubleshooting operating systems, internal applications, and connectivity issues. I also developed automation scripts using PowerShell, CMD, and Unix/Linux environments to streamline administrative and operational tasks.</span></p>
                 </li>
                 <li>
                   <h2>Full Stack Developer</h2>
-                  <p >As part of an intensive bootcamp at Digital House, I developed MyMad Games, a fictional e-commerce platform focused on video game sales. The project was built using HTML, CSS, JavaScript, and Node.js, incorporating UX/UI design principles and agile methodologies. Beyond improving my technical skill set, this project taught me how to collaborate in a team setting, meet tight deadlines, and maintain both visual and functional consistency in a full stack application.</p>
+                  <p >As part of an intensive bootcamp at Digital House, I developed MyMad Games, a fictional e-commerce platform focused on video game sales. The project was built using HTML, CSS, JavaScript, and Node.js, incorporating UX/UI design principles and agile methodologies.<span class="mobileHide"> Beyond improving my technical skill set, this project taught me how to collaborate in a team setting, meet tight deadlines, and maintain both visual and functional consistency in a full stack application.</span></p>
                 </li>
               </ul>
             </div>
