Se corrigieron inconvenientes en la subida del sitio web.

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
             </div>
            </div>
            <div class="projectCardImage"><picture>
-  <source srcset="images/mymadgame-mobile.webp" media="(max-width: 768px)" type="image/webp">
+  <source srcset="images/mymadGame-mobile.webp" media="(max-width: 768px)" type="image/webp">
   <source srcset="images/mymadGame.png">
   <img loading="lazy" src="images/mymadGame.png" alt="MymadGames Website">
 </picture></div>
