Se corrigieron inconvenientes en la subida del sitio web.

--- a/index-es.html
+++ b/index-es.html
@@ -29,6 +29,8 @@
     <nav class="mobileMenu">
 
       <ul class="navLinks">
+       
+        
         <li><a href="#projects">proyectos</a></li>
         <li><a href="#aboutMe">acerca</a></li>
         <li><a href="#contact">contacto</a></li>
@@ -283,7 +285,7 @@ El proyecto fue desarrollado en un entorno colaborativo utilizando metodologías
             </div>
            </div>
            <div class="projectCardImage"><picture>
-  <source srcset="images/mymadgame-mobile.webp" media="(max-width: 768px)" type="image/webp">
+  <source srcset="images/mymadGame-mobile.webp" media="(max-width: 768px)" type="image/webp">
   <source srcset="images/mymadGame.png">
   <img loading="lazy" src="images/mymadGame.png" alt="Sitio web MymadGames">
 </picture></div>
