--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Web portfolio of Bruno Costales, web developer with experience in front-end, back-end, scripting and WordPress solutions.">
-
+  <meta http-equiv="refresh" content="0; URL='index-es.html'" />
 
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
