--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,400;0,700;1,100;1,700&family=Sora:wght@300;400;600&display=swap" rel="stylesheet">
- <link rel="stylesheet" href="/style.css"  media="(min-width: 769px)">
-   <link rel="stylesheet" href="/mobile.css" media="(max-width: 768px)">
+ <link rel="stylesheet" href="style.css"  media="(min-width: 769px)">
+   <link rel="stylesheet" href="mobile.css" media="(max-width: 768px)">
  
   
   <title>Bruno Costales</title>
