Se corrigio inconvenientes en MOBILES

--- a/index-es.html
+++ b/index-es.html
@@ -235,7 +235,7 @@
             
 
 
-              <div class="work">
+              <div id="job" class="work">
            <div class="workContent">
                <h1>LIMITLESSFEET</h1>
                <h2>Health Care WEBSITE #2025</h2>
