--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
           
 
 
-          <div id="job"  class="experienceList">
+          <div   class="experienceList">
               <ul>
                 <li>
                   <h2>Freelance Developer</h2>
@@ -248,7 +248,7 @@
             
 
 
-              <div   class="work">
+              <div  id="job" class="work">
            <div  class="workContent">
                <h1>LIMITLESSFEET</h1>
                <h2>Health Care WEBSITE #2025</h2>
