--- a/index-es.html
+++ b/index-es.html
@@ -11,7 +11,14 @@
 
  <link rel="stylesheet" href="style.css"  media="(min-width: 769px)">
    <link rel="stylesheet" href="mobile.css" media="(max-width: 768px)">
-  <title>Bruno Costales</title>
+  <title>Bruno Costales Dev</title>
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-YGBBTYRFC6"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-YGBBTYRFC6');
+  </script>
 </head>
 
 <body>
