--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
    <link rel="stylesheet" href="mobile.css" media="(max-width: 768px)">
  
   
-  <title>Bruno Costales</title>
+  <title>Bruno Costales Dev</title>
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-YGBBTYRFC6"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-YGBBTYRFC6');
+  </script>
 </head>
 
 <body>
